--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,6 +1,12 @@
-<mvc:View controllerName="zovfrontend.controller.View1"
+<mvc:View
+    controllerName="zovfrontend.controller.View1"
     xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
+    xmlns="sap.m"
+>
+    <Page title="{i18n>appTitle}">
+        <Button
+            text="Formulário de Cadastro Ordem"
+            press="onCadastroOrdem"
+        />
     </Page>
 </mvc:View>
