--- a/webapp/view/Formulario.view.xml
+++ b/webapp/view/Formulario.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="zovfrontend.controller.FormularioCadastro"
+    controllerName="zovfrontend.controller.Formulario"
     xmlns:mvc="sap.ui.core.mvc"
     displayBlock="true"
     xmlns:core="sap.ui.core"
