--- a/webapp/view/Formulario.view.xml
+++ b/webapp/view/Formulario.view.xml
@@ -268,6 +268,13 @@
                     press="onSave"
                     type="Emphasized"
                 />
+                <Button
+                    id="bt-delete"
+                    text="Deletar"
+                    press="onDelete"
+                    type="Reject"
+                    visible="false"
+                />
             </Toolbar>
         </footer>
     </Page>
