--- a/webapp/view/OrdemLista.view.xml
+++ b/webapp/view/OrdemLista.view.xml
@@ -145,6 +145,22 @@
             </fb:FilterBar>
             <HBox justifyContent="End">
                 <Button
+                    text="Fornecer"
+                    press="onAtualizarStatus('L')"
+                    class="sapUiSmallMarginEnd sapUiSmallMarginTop"
+                />
+                <Button
+                    text="Faturar"
+                    press="onAtualizarStatus('F')"
+                    class="sapUiSmallMarginEnd sapUiSmallMarginTop"
+                />
+                <Button
+                    text="Cancelar"
+                    id="bt-cancel"
+                    press="onAtualizarStatus('C')"
+                    class="sapUiSmallMarginEnd sapUiSmallMarginTop"
+                />
+                <Button
                     text="Nova Ordem"
                     id="bt-new"
                     press="onNew"
